Removed fixed size for better alignment.

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 body {
-    display:flex;
-    flex-direction:column;
+
     font-family:roboto; 
     margin:0;
+}
+.container {
+    display:flex;
+   flex-direction:column;
 }
 main {
     display: flex;
     flex-direction: column;
-    flex:1;
+   
 }
 
 .header-text {
@@ -52,13 +55,15 @@ button {
 .header-body {
     display:flex;
     flex-wrap: wrap;
-    justify-content:space-evenly;
+    justify-content:space-around;
     align-items:center;
-    margin-top:100px;
+    padding:100px;
 }
 header { 
    color:white;
-    height:75vh;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
     background:#000000;
     background-image: url('https://images.pexels.com/photos/236296/pexels-photo-236296.jpeg');
     background-repeat: no-repeat;
@@ -107,7 +112,7 @@ pre {
     font-weight: 510;
 }
 .main-second {
-    height:50vh;
+   
     background:#E5E7EB;
 }
 .quote {
@@ -116,13 +121,10 @@ pre {
     font-style: italic ;
 }
 .quote-section {
-    margin-right:250px;
-    margin-left:250px;
+     
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height:45vh;
+    padding:0 200px;
     background:#E5E7EB;
 }
 
@@ -152,31 +154,31 @@ a {
     font-size:36px;
     font-weight:bold;
     color:#1F2937;
-    margin-top:-40px;
+  
+}
+.main-first {
+    text-align: center;
 }
 
-.main-first {
-    height:70vh;
-    display:flex;
-    flex-direction:column;
-    justify-content: center;
-     align-items:center;
-    flex-direction:column;;
-}
 
 .cluster {
-   
-    display:flex;
-    gap:100px;
-    flex-direction:row;
+   text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 100px;
+    
 }
+
+   
+
 .cluster img{
     border-radius:15px;
     width:230px;
     height:310px;
-}
-.information {
-    text-align:center;
+    object-fit:cover;
+    margin: 5px 20px 0px 20px;
+
 }
 
 .box button {
@@ -189,13 +191,11 @@ a {
     font-weight:bold;
     font-size:17px;
     width:130px;
-    
      border: 2px solid white; 
   
 }
 
 .footer {
-    height: 15vh;
     display: flex;
     background-color: #000000;
     color:white;
